# scEvalsJam

./: .gitignore  README.md  pyproject.toml  requirements.txt  scGEN.ipynb  test.py
scenarios/splits/: __init__.py  pyproject.toml  splits.py
scenarios/splits/configs/: scenario_1_scgen.yaml
scenarios/splits/examples/: test_train_split_example.ipynb
scenarios/splits/examples/data/moignard15/: nbt.3154-S3.xlsx
src/sams-vae/: LICENSE  download_datasets.py  eval.py  launch_sweep.py  run_both_datasets.ipynb  setup.cfg  train.py
src/sams-vae/demo/: README.md  sams_vae_norman.yaml  sams_vae_replogle.yaml  visualize_results.ipynb
src/sams-vae/env/: environment-linux.yml  environment-osx.yml
src/sams-vae/paper/experiments/norman_data_efficiency/: 1_launch_train_sweeps.py  2_launch_sweep_evals.py  3_aggregate_results.py  4_download_checkpoints.py  README.md  figures.ipynb  sweep_ids.yaml
src/sams-vae/paper/experiments/norman_ood/: 1_launch_train_sweeps.py  2_launch_sweep_evals.py  3_aggregate_results.py  4_download_checkpoints.py  README.md  figures.ipynb  sweep_ids.yaml
src/sams-vae/paper/experiments/replogle_filtered/: 1_launch_train_sweeps.py  2_launch_sweep_evals.py  3_aggregate_results.py  4_download_checkpoints.py  README.md  sweep_ids.yaml
src/sams-vae/results_default_testtrain/sams_vae_replogle-11/: summary.csv
src/sams-vae/sams_vae.egg-info/: PKG-INFO  SOURCES.txt
src/sams-vae/sams_vae/analysis/: average_treatment_effects.py  simulation_metrics.py
src/sams-vae/sams_vae/data/: __init__.py
src/sams-vae/sams_vae/models/: __init__.py
(+150 files in other folders)
