[tool.poetry]
name = "perturbench"
version = "0.1.0"
description = ""
authors = ["Adam Boxall <ab70@sanger.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
anndata = "^0.10.7"
torch = "^2.3.1"
jupyter = "^1.0.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

