[metadata]
name = sams_vae
version = 0.0.1
author = Michael Bereket, Theofanis Karaletsos
author_email = michael@insitro.com, theofanis@insitro.com
description = SAMS-VAE implementation and sandbox for comparison of perturbation models
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
